tests/snapshots/card_parse__bad_stamps.snap
---
source: tests/card_parse.rs
expression: notes
---
[
    Note {
        heading: "### someday",
        at: None,
        auto: false,
        doing: "a",
        next: "b",
        watch_out: "c",
        place: Place {
            cwd: Some(
                "/a",
            ),
            herdr: Some(
                HerdrPlace {
                    pane: "w1:p2",
                    tab: None,
                    workspace: None,
                },
            ),
            session: None,
        },
        extra: [],
    },
    Note {
        heading: "### 2026-13-45T99:00:00+03:00",
        at: None,
        auto: false,
        doing: "d",
        next: "e",
        watch_out: "f",
        place: Place {
            cwd: None,
            herdr: None,
            session: None,
        },
        extra: [],
    },
]
