tests/snapshots/card_parse__local_stamps.snap
---
source: tests/card_parse.rs
expression: notes
---
[
    Note {
        heading: "### 2026-10-08 10:31",
        at: Some(
            2026-10-08T10:31:00+03:00[+03:00],
        ),
        auto: false,
        doing: "a",
        next: "b",
        watch_out: "c",
        place: Place {
            cwd: Some(
                "/a",
            ),
            herdr: None,
            session: None,
        },
        extra: [],
    },
    Note {
        heading: "### 2026-10-08 11:02:07 auto",
        at: Some(
            2026-10-08T11:02:07+03:00[+03:00],
        ),
        auto: true,
        doing: "d",
        next: "e",
        watch_out: "f",
        place: Place {
            cwd: None,
            herdr: None,
            session: None,
        },
        extra: [],
    },
]
