tests/snapshots/card_parse__quoted_places.snap
---
source: tests/card_parse.rs
expression: notes
---
[
    Note {
        heading: "### 2026-10-08T10:31:05+03:00",
        at: Some(
            2026-10-08T10:31:05+03:00[+03:00],
        ),
        auto: false,
        doing: "a",
        next: "b",
        watch_out: "c",
        place: Place {
            cwd: Some(
                "/home/a b/\"q\"\\x",
            ),
            herdr: Some(
                HerdrPlace {
                    pane: "w1:p2",
                    tab: Some(
                        "w1 t",
                    ),
                    workspace: None,
                },
            ),
            session: Some(
                "s1",
            ),
        },
        extra: [],
    },
]
