tests/snapshots/card_parse__w9_4_9.snap
---
source: tests/card_parse.rs
expression: card
---
Card {
    id: CardId {
        letter: 'W',
        number: 9,
    },
    path: "W-9.md",
    title: "bump rust-version to 1.89",
    column: "Done",
    template: Some(
        "Chore",
    ),
    created: Some(
        2026-10-06T16:20:00+03:00[+03:00],
    ),
    body: "\n",
    notes: [
        Note {
            heading: "### 2026-10-06T17:05:12+03:00",
            at: Some(
                2026-10-06T17:05:12+03:00[+03:00],
            ),
            auto: false,
            doing: "merged, CI green",
            next: "nothing left",
            watch_out: "nothing",
            place: Place {
                cwd: Some(
                    "/home/smilen/Work/private/brain-swap",
                ),
                herdr: None,
                session: None,
            },
            extra: [],
        },
    ],
    writable: true,
    mtime: None,
}
